# gravsense

./: .dockerignore  .gitignore  Dockerfile  README.md  README_v0.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
gravsense/: __init__.py
gravsense/api/: main.py  schemas.py
gravsense/api/static/: index.html
gravsense/core/: auto_calibrate.py  depth_estimator.py  grounded_sam.py  segformer_detector.py  volume.py
notebooks/: gravat-segformer-b0-finetuned-ade-512-512.ipynb
tests/: test_api.py
