[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gravsense"
version = "1.0.0"
description = "Construction debris detection and volume estimation API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
    "transformers>=4.45",
    "torch>=2.2",
    "torchvision>=0.17",
    "opencv-python-headless>=4.9",
    "pillow>=10.3",
    "numpy>=1.26",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gravsense*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
